gccida/c2/find_mem_givs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5896:1: error: use of undeclared identifier 'induction_1'
induction_1 *v11; // rbp 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5896:14: error: use of undeclared identifier 'v11'; did you mean 'v10'?
induction_1 *v11; // rbp 
             ^~~
             v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5895:9: note: 'v10' declared here
__int64 v10; // rdx 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5930:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v8)) ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5932:22: error: expected expression
v11 = ( induction_1 *)xmalloc( 0xA8uLL); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5932:9: error: use of undeclared identifier 'induction_1'
v11 = ( induction_1 *)xmalloc( 0xA8uLL); 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5932:1: error: use of undeclared identifier 'v11'
v11 = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5935:1: error: use of undeclared identifier 'v11'
v11, 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/loop.c:5947:1: error: use of undeclared identifier 'v11'
v11->mem = x; 
^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_mem_givs/src/obj/loop.o] Error 1
